--- a/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
+++ b/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
@@ -1,5 +1,5 @@
 <div class="search-home">
-  <div class="container-fluid">
+  <div class="container">
     <div class="login pull-right" *ngIf="this.user;else login">
       <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Account
