--- a/src/app/components/manager/manager-order/manager-order.component.html
+++ b/src/app/components/manager/manager-order/manager-order.component.html
@@ -15,6 +15,33 @@
 </nav>
 
 <div class="container-fluid page-margin">
+  <ul class="nav nav-tabs nav-justified">
+    <li role="presentation" class="active">
+      <a (click)="DisplayPaidOrders()" class="btn">
+        Paid
+      </a>
+    </li>
+    <li role="presentation">
+      <a (click)="DisplayAcceptedOrders()" class="btn">
+        Accepted
+      </a>
+    </li>
+    <li role="presentation">
+      <a (click)="DisplayReadyOrders()" class="btn">
+        Ready
+      </a>
+    </li>
+    <li role="presentation">
+      <a (click)="DisplayDeliveredOrders()" class="btn">
+        Delivered
+      </a>
+    </li>
+    <li role="presentation">
+      <a (click)="DisplayCancelledOrders()" class="btn">
+        Cancelled
+      </a>
+    </li>
+  </ul>
   <ul class="list-group">
     <li class="list-group-item active">
       <div class="row">
@@ -25,7 +52,7 @@
           Order Price
         </div>
         <div class="col-sm-3 col-md-3 hidden-xs">
-          Order Status
+          Order Date
         </div>
         <div class="col-xs-3">
         </div>
@@ -42,7 +69,7 @@
           {{order['total']}}
         </div>
         <div class="col-sm-3 col-md-3 hidden-xs">
-          {{order['state']}}
+        {{order['dateCreated']}}
         </div>
         <div class="col-xs-3">
           <button [routerLink]="['/manager', 'restaurant', restaurantId, 'order', order._id]"
