--- a/src/app/components/admin/admin-manager-list/admin-manager-list.component.html
+++ b/src/app/components/admin/admin-manager-list/admin-manager-list.component.html
@@ -3,7 +3,7 @@
   <ul class="nav nav-tabs nav-justified">
     <li role="presentation"><a [routerLink]="['/admin/customer']">Customers</a></li>
     <li role="presentation" class="active"><a [routerLink]="['/admin/manager']">Managers</a></li>
-    <li role="presentation"><a [routerLink]="['/admin/order']">Orders</a></li>
+    <li role="presentation"><a [routerLink]="['/admin/profile']">Profile</a></li>
   </ul>
 
   <ul class="list-group">
