--- a/src/app/components/manager/manager-order/manager-order.component.html
+++ b/src/app/components/manager/manager-order/manager-order.component.html
@@ -73,7 +73,7 @@
         </div>
         <div class="col-xs-3">
           <button [routerLink]="['/manager', 'restaurant', restaurantId, 'order', order._id]"
-                  class="btn btn-primary btn-block">View Order</button>
+                  class="btn btn-success btn-block">View Order</button>
         </div>
       </div>
     </li>
