--- a/src/app/components/menu/menu-new/menu-new.component.html
+++ b/src/app/components/menu/menu-new/menu-new.component.html
@@ -33,7 +33,7 @@
              name="orderLimit"/>
       <button [routerLink]="['/manager', 'restaurant', this.restaurantId]"
               type="submit"
-              class="btn btn-primary btn-block">
+              class="btn btn-success btn-block">
         Done
       </button>
     </div>
