--- a/src/app/components/menuItem/menu-item-edit/menu-item-edit.component.html
+++ b/src/app/components/menuItem/menu-item-edit/menu-item-edit.component.html
@@ -54,8 +54,8 @@
                 required
                 placeholder="Menu Item Description"
                 [(ngModel)] = "description"></textarea>
-      <button type="submit" class="btn btn-primary btn-block">Update menu Item</button>
-      <button (click)="DeleteMenuItem()" class="btn btn-primary btn-block">Delete menu Item</button>
+      <button type="submit" class="btn btn-success btn-block">Update menu Item</button>
+      <button (click)="DeleteMenuItem()" class="btn btn-danger btn-block">Delete menu Item</button>
     </div>
   </div>
 </form>
