--- a/src/app/components/order/order-complete/order-complete.component.html
+++ b/src/app/components/order/order-complete/order-complete.component.html
@@ -1,5 +1,41 @@
-<header></header>
-<div class="container">
+<header>
+  <div class="container food-center">
+    <div class="login pull-right" *ngIf="this.user;else login">
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Account
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li>
+            <a [routerLink]="['profile']">
+              My Profile
+            </a>
+          </li>
+          <li>
+            <a [routerLink]="['orders']">
+              My Orders
+            </a>
+          </li>
+          <li>
+            <a (click)="logout()">Logout</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <ng-template #login>
+      <div class="pull-right">
+        <a [routerLink]="['/login']" class="btn btn-default btn-lg">
+          Login
+        </a>
+        <a [routerLink]="['/register']" class="btn btn-primary btn-lg">
+          Sign Up
+        </a>
+      </div>
+    </ng-template>
+    <span class="food-center">FoOdSpOt </span>
+  </div>
+</header>
+<div class="container food-bottombuff">
   <h2 class="text-center text-success">{{stateText()}}</h2>
   <div class="row">
     <div class="address col-xs-6 col-sm-4">
@@ -75,3 +111,8 @@
     Go to Homepage
   </a>
 </div>
+<footer>
+  <div class="food-right">
+    <p><b>© Abhishek Sadaab Vivek</b></p>
+  </div>
+</footer>
