--- a/src/styles.css
+++ b/src/styles.css
@@ -6,3 +6,18 @@
   margin-top: 50px;
   padding-top: 15px
 }
+.food-bottombuff
+{
+  margin-bottom: 70px;
+}
+
+.food-right
+{
+  text-align: right;
+}
+
+
+.food-center
+{
+  text-align: center;
+}
