--- a/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
+++ b/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
@@ -54,3 +54,54 @@
     </div>
   </div>
 </div>
+<div>
+  <nav class="text-center">
+    <ul class="home">
+      <li>
+        <img src="http://www.yarlolaigifts.com/image/cache/catalog/Products/FoodAndWine/Food/Cosy/Chinese-Chicken-Noodle-220x220_0.png" alt="Chinese">
+        <span>Chinese</span>
+      </li>
+      <li>
+        <img src="http://eatmorefellinis.com/communities/5/000/001/377/115//images/4032063.jpg" alt="Pizza">
+        <span>Pizza</span>
+      </li>
+      <li>
+        <img src="http://www.myserviceprofile.com/clientimages/Photo_25967_1.jpg" alt="Thai">
+        <span>Thai</span>
+      </li>
+      <li>
+        <img src="http://sushiworldoc.com/sites/default/files/styles/medium/public/Orange-County-Sushi-World-OC-Unique-Custom-Sushi-Rolls-Avocado-Albacore-Tuna-Sesame-Seeds.jpg?itok=aYlnfJn_" alt="Sushi">
+        <span>Sushi</span>
+      </li>
+      <li>
+        <img src="http://line-around.com/wp-content/uploads/2015/04/3304382-indian-food-001-220x220.jpg" alt="Indian">
+        <span>Indian</span>
+      </li>
+    </ul>
+  </nav>
+  <div class="container how-to">
+    <h2 class="text-center text-primary">Simple steps to Order online</h2>
+    <br/>
+    <div class="row">
+      <div class="col-xs-12 col-sm-4 text-center">
+        <span class="glyphicon glyphicon-search home"></span>
+        <div class="home-desc">
+          Search for your favorite Restaurant online with location
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4 text-center">
+        <span class="glyphicon glyphicon-shopping-cart home"></span>
+        <div class="home-desc">
+          Add Items to your card from the restaurant menu
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4 text-center">
+        <span class="glyphicon glyphicon-map-marker home"></span>
+        <div class="home-desc">
+          Enter your delivery address. Click Complete Order.
+          All Set!
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
