--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,5 +1,6 @@
 <form (ngSubmit) = "update()" #f="ngForm">
 <header>
+  <a [routerLink]="['']" class="white"><span class="glyphicon glyphicon-chevron-left"></span></a>
   Profile
   <button type="submit"
           class="pull-right white btn"
