--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -101,7 +101,37 @@ ul {
 .logo {
   padding: 2rem;
   text-align: center;
-  margin-left: 15%;
+  margin-left: 10%;
+}
+ul.home {
+  margin: 0;
+  margin-top: 2rem;
+  padding: 1rem;
+  display: inline-block;
+  list-style-type: none;
+}
+
+ul.home li {
+  width: 200px;
+  height: 200px;
+  margin: 0 10px;
+  float: left;
+  position: relative;
+  overflow: hidden;
+  border: 5px solid #fff;
+  box-shadow: 0 0 3px rgba(4,4,4,0.3);
+}
+
+ul.home li span {
+  padding: 118px 0 5px;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 900;
+  text-align: center;
 }
 
 .search-box {
@@ -158,6 +188,20 @@ ul {
 .margin-top-button
 {
   margin-top: 10px;
+}
+
+.home {
+  font-size: 80px;
+  color: #1b6d85;
+}
+
+.home-desc {
+  font-size: large;
+  color: #1b6d85;
+}
+
+.how-to {
+  margin-bottom: 80px;
 }
 /* You can add global styles to this file, and also import other style files */
 
