Fix headers and footers

--- a/src/app/components/order/order-complete/order-complete.component.html
+++ b/src/app/components/order/order-complete/order-complete.component.html
@@ -1,5 +1,6 @@
 <header>
-  <div class="container food-center">
+  <div class="container-fluid food-center">
+    <span class="food-center">FoOdSpOt </span>
     <div class="login pull-right" *ngIf="this.user;else login">
       <div class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Account
@@ -32,7 +33,6 @@
         </a>
       </div>
     </ng-template>
-    <span class="food-center">FoOdSpOt </span>
   </div>
 </header>
 <div class="container food-bottombuff">
