--- a/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
+++ b/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
@@ -38,7 +38,7 @@
     </div>
     <div class="row search-box">
       <div class="col-xs-12 col-sm-6">
-        <input [(ngModel)]="restaurant" placeholder="Restaurant Name" class="restaurant_seach_input_field form-control">
+        <input [(ngModel)]="restaurant" placeholder="Restaurant Name/Cuisine" class="restaurant_seach_input_field form-control">
       </div>
       <div class="col-xs-12 col-sm-6">
         <input [(ngModel)]="location" placeholder="Location" class="location_seach_input_field form-control">
