--- a/src/app/components/order/order-checkout/order-checkout.component.html
+++ b/src/app/components/order/order-checkout/order-checkout.component.html
@@ -1,6 +1,7 @@
 <header>
-  <div class="container food-center">
+  <div class="container-fluid food-center">
     <a [routerLink]="['/restaurant', restaurantId,'order',orderId]" class="white pull-left"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <span class="food-center">FoOdSpOt </span>
 
     <div class="login pull-right" *ngIf="this.user;else login">
       <div class="dropdown">
@@ -34,7 +35,6 @@
         </a>
       </div>
     </ng-template>
-    <span class="food-center">FoOdSpOt </span>
   </div>
 </header>
 <div class="container food-bottombuff">
