--- a/src/app/components/restaurant/restaurant.list/restaurant.list.component.html
+++ b/src/app/components/restaurant/restaurant.list/restaurant.list.component.html
@@ -3,8 +3,9 @@
 <!--<button (click)="SearchRestaurant(restaurant,location)"-->
 <!--class="btn btn-primary btn-block search_button">Search</button>-->
 <header>
-  <div class="container food-center">
+  <div class="container-fluid food-center">
     <a [routerLink]="['/']" class="white pull-left"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <span class="food-center">FoOdSpOt </span>
 
     <div class="login pull-right" *ngIf="this.user;else login">
       <div class="dropdown">
@@ -38,7 +39,6 @@
         </a>
       </div>
     </ng-template>
-    <span class="food-center">FoOdSpOt </span>
   </div>
 </header>
 <div class="container food-bottombuff"  >
