--- a/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
@@ -7,12 +7,12 @@
         </a>
       </li>
       <li role="presentation">
-        <a [routerLink]="['/restaurant/', restaurantId, 'chef']" class="btn">
+        <a [routerLink]="['/manager','restaurant', restaurantId, 'chef']" class="btn">
           View Chefs
         </a>
       </li>
       <li role="presentation">
-        <a [routerLink]="['/restaurant/', restaurantId, 'driver']" class="btn">
+        <a [routerLink]="['/manager', 'restaurant', restaurantId, 'driver']" class="btn">
           View Drivers
         </a>
       </li>
