Links corrected from manager's profile page

--- a/src/app/components/driver/driver-list/driver-list.component.html
+++ b/src/app/components/driver/driver-list/driver-list.component.html
@@ -10,7 +10,7 @@
     <ul class="nav nav-tabs nav-justified">
       <li role="presentation">
         <a [routerLink]="['/admin/manager/', managerId]" class="btn">
-          Manager's Profile
+          My Profile
         </a>
       </li>
       <li role="presentation" class="active">
@@ -34,7 +34,7 @@
     <ul class="nav nav-tabs nav-justified">
       <li role="presentation">
         <a [routerLink]="['/manager/restaurant', restaurantId]" class="btn">
-          Manager's Profile
+          My Profile
         </a>
       </li>
       <li role="presentation">
