--- a/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
+++ b/src/app/components/restaurant/restaurant.search/restaurant.search.component.html
@@ -7,12 +7,12 @@
         </button>
         <ul class="dropdown-menu">
           <li>
-            <a [routerLink]="['profile']">
+            <a [routerLink]="['/profile']">
               My Profile
             </a>
           </li>
           <li>
-            <a [routerLink]="['orders']">
+            <a [routerLink]="['/orders']">
               My Orders
             </a>
           </li>
