--- a/src/app/components/driver/driver-list/driver-list.component.html
+++ b/src/app/components/driver/driver-list/driver-list.component.html
@@ -38,8 +38,8 @@
         </a>
       </li>
       <li role="presentation">
-        <a [routerLink]="['/manager/restaurant/', restaurantId, 'driver']" class="btn">
-          View Drivers
+        <a [routerLink]="['/manager/restaurant/', restaurantId, 'chef']" class="btn">
+          View Chefs
         </a>
       </li>
       <li role="presentation" class="active">
