logout for manager

--- a/src/app/components/driver/driver-list/driver-list.component.html
+++ b/src/app/components/driver/driver-list/driver-list.component.html
@@ -52,6 +52,11 @@
           View Orders
         </a>
       </li>
+      <li role="presentation">
+        <a (click)="AddOrViewMenu()" class="btn">
+          View Menu
+        </a>
+      </li>
     </ul>
   </ng-template>
   <ul class="list-group">
