--- a/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
+++ b/src/app/components/manager/manager-dashboard/manager-dashboard.component.html
@@ -102,6 +102,7 @@
       <button type="submit"
               class="btn btn-primary form-control"
               [disabled]="!f.valid">Update Profile</button>
+      <a (click)="logout()" class="btn btn-danger btn-block">Logout</a>
     </div>
   </form>
 </div>
