--- a/src/app/components/chef/chef-list/chef-list.component.html
+++ b/src/app/components/chef/chef-list/chef-list.component.html
@@ -37,19 +37,24 @@
           My Profile
         </a>
       </li>
-      <li role="presentation">
-        <a [routerLink]="['/manager/restaurant/', restaurantId, 'driver']" class="btn">
-          View Drivers
-        </a>
-      </li>
       <li role="presentation" class="active">
         <a [routerLink]="['/manager/restaurant/', restaurantId, 'chef']" class="btn">
           View Chefs
         </a>
       </li>
       <li role="presentation">
+        <a [routerLink]="['/manager/restaurant/', restaurantId, 'driver']" class="btn">
+          View Drivers
+        </a>
+      </li>
+      <li role="presentation">
         <a [routerLink]="['/manager/restaurant/', restaurantId, 'order']" class="btn">
           View Orders
+        </a>
+      </li>
+      <li role="presentation">
+        <a (click)="AddOrViewMenu()" class="btn">
+          View Menu
         </a>
       </li>
     </ul>
