--- a/src/app/components/restaurant/restaurant.detail/restaurant.detail.component.html
+++ b/src/app/components/restaurant/restaurant.detail/restaurant.detail.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="container-fluid food-center">
-  <a [routerLink]="['/']" class="white pull-left"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '14px' }"></ngx-loading>
+
+    <a [routerLink]="['/']" class="white pull-left"><span class="glyphicon glyphicon-chevron-left"></span></a>
     <span class="food-center">FoOdSpOt </span>
 
   <div class="login pull-right" *ngIf="this.user;else login">
