Add header and footer on registration

--- a/src/app/components/driver/driver-register/driver-register.component.html
+++ b/src/app/components/driver/driver-register/driver-register.component.html
@@ -1,3 +1,7 @@
+<header>
+  <a [routerLink]="['']" class="white"><span class="glyphicon glyphicon-chevron-left"></span></a>
+  <span class="food-center">FoOdSpOt </span>
+</header>
 <div class="container-fluid">
   <div class="thanks" *ngIf="this.success">
     <h1 class="text-center text-success">Thanks for registering as Delivery agent.</h1>
@@ -12,7 +16,7 @@
     </a>
   </div>
   <div *ngIf="!this.success">
-    <h1>Register</h1>
+    <h1>Register as a Driver agent</h1>
     <form (ngSubmit) = "register()" #f="ngForm">
       <input type="text"
              name="username"
@@ -101,3 +105,9 @@
     </form>
   </div>
 </div>
+<footer>
+  <div class="food-right">
+    <p><b>© Abhishek Sadaab Vivek</b></p>
+  </div>
+</footer>
+
