--- a/src/app/components/user/register/register.component.html
+++ b/src/app/components/user/register/register.component.html
@@ -1,3 +1,21 @@
+<header>
+  <div class="container-fluid food-center">
+
+    <a [routerLink]="['/']" class="white pull-left"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <span class="food-center">FoOdSpOt </span>
+
+    <div class="login pull-right">
+      <div class="pull-right">
+        <a [routerLink]="['/login']" class="btn btn-default btn-lg">
+          Login
+        </a>
+        <a [routerLink]="['/register']" class="btn btn-primary btn-lg">
+          Sign Up
+        </a>
+      </div>
+    </div>
+  </div>
+</header>
 <div class="container-fluid">
   <h1>Register</h1>
   <form (ngSubmit) = "register()" #f="ngForm">
@@ -77,3 +95,9 @@
   </form>
 
 </div>
+<footer>
+  <div class="food-right">
+    <p><b>© Abhishek Sadaab Vivek</b></p>
+  </div>
+</footer>
+
